--- a/sale.html
+++ b/sale.html
@@ -515,7 +515,7 @@
         var options = {
 
           url: function(phrase) {
-            return "http://150.95.26.163:8080/gitmew/php/search.php";
+            return "http://150.95.26.163:8080/gitmew/php/search.php?cus_id="+cus_id;
           },
 
           getValue: function(element) {
