--- a/sale.html
+++ b/sale.html
@@ -519,7 +519,7 @@
           },
 
           getValue: function(element) {
-            //console.log(element);
+            console.log(element);
             return element.prod_name;
           },
 
