--- a/sale.html
+++ b/sale.html
@@ -428,7 +428,7 @@
     var datetime;
     var sum = 0;
     var sum_dis = 0;
-    var cus_id;
+    var cus_id = 0;
     var img;
     var prod_id;
     $(document).ready(function(){      
@@ -907,9 +907,9 @@
           item ["prod_id"] =  jsonObj[i].prod_id;
           item ["discount"] =  jsonObj[i].discount;      
           if($('#box'+(i+1)).is(':checked') == true){
-            item ["bonus"] =  true;
+            item ["bonus"] =  1;
           }else{
-            item ["bonus"] =  false;
+            item ["bonus"] =  0;
           }
           json.push(item);         
           no++;
@@ -930,8 +930,8 @@
         var cus_name = $('#cus').val();
         var dataString =  "JSON=" + jsonString + "&cus_id=" + cus_id + "&b_id=" + b_id + "&date=" + datetime + "&sum=" + sum_price
         + "&pay=" + pay_type + "&dis=" + discount + "&get_money=" + get_money + "&change_money=" + change_money + "&final_price=" 
-        + final_price + "&comment=" + comment + "&name_cus=" + cus_name;  
-
+        + final_price + "&comment=" + comment + "&name_cus=" + cus_name + "&user_id=" + localStorage.user_id;     
+        
         var WinPrint  = window.open('', '', 'left=0,top=0,width=1300,height=600,toolbar=0,scrollbars=0,status=0');
         $.ajax({
             type: "POST",
@@ -975,6 +975,8 @@
                     WinPrint.focus();
                     WinPrint.print();
                     WinPrint.close();   
+                  }else{
+                    WinPrint.close();
                   }                           
                   $('#show_list_add').empty();
                   jsonObj = [];                  
