--- a/sale.html
+++ b/sale.html
@@ -563,14 +563,7 @@
                 $('#total').val(price);
               }
           },
-<<<<<<< HEAD
-
-          //requestDelay: 400,
-
-
-=======
           requestDelay: 400,          
->>>>>>> 837de08d503b0ea2cc86a041c070caedaa31b11c
         };
 
         $("#name").easyAutocomplete(options);
@@ -612,14 +605,7 @@
                 cus_id = $("#cus").getSelectedItemData().customer_id;
               }
           },
-<<<<<<< HEAD
-
-          //requestDelay: 400,
-
-
-=======
           requestDelay: 400,          
->>>>>>> 837de08d503b0ea2cc86a041c070caedaa31b11c
         };
 
         $("#cus").easyAutocomplete(options_cus);
@@ -647,8 +633,6 @@
       });
     }
 
-<<<<<<< HEAD
-=======
     function chng_amt(){
       var amt = $('#amount').val();
       $.ajax({
@@ -664,7 +648,6 @@
       });
     }
     
->>>>>>> 837de08d503b0ea2cc86a041c070caedaa31b11c
     var total_old,dis_old;
     function edit(arg){
       $("#btn_edit"+arg).prop('hidden', true);
@@ -905,17 +888,11 @@
 
       $('#net-price').val(total);
       $('#discount-money').val(dis);
-<<<<<<< HEAD
-      $('#final-price').val(net);
-    }
-
-=======
       $('#final-price').val(net); 
       $('#get-money').val(""); 
       $('#change-money').val("");
     }   
    
->>>>>>> 837de08d503b0ea2cc86a041c070caedaa31b11c
     function save(){
       if(jsonObj.length > 0 && $('#get-money').val() != "" && $('#cus').val() != "" && $('#change-money').val() != ""){
         var no = 1;
@@ -937,7 +914,7 @@
           json.push(item);
           no++;
 
-          text = text + "<div style='font-size: 0.6em; margin-left: 15%; float: left; width: 60%;'>"+jsonObj[i].name+"</div>" + "<div style='margin-left: 75%; margin-right: 15%; font-size: 0.6em;'>"+jsonObj[i].price+"("+jsonObj[i].amount+")</div>";
+          text = text + "<div class='txt-left'>"+jsonObj[i].name+"</div>" + "<div class='txt-right'>"+jsonObj[i].price+" x "+jsonObj[i].amount+"</div> </div>";
         });
         var jsonString = JSON.stringify(json);
         var print = $('input[name=print-radio]:checked').val();
@@ -952,13 +929,8 @@
         var change_money = $('#change-money').val();
         var cus_name = $('#cus').val();
         var dataString =  "JSON=" + jsonString + "&cus_id=" + cus_id + "&b_id=" + b_id + "&date=" + datetime + "&sum=" + sum_price
-<<<<<<< HEAD
-        + "&pay=" + pay_type + "&dis=" + discount + "&get_money=" + get_money + "&change_money=" + change_money + "&final_price="
-        + final_price + "&comment=" + comment;
-=======
         + "&pay=" + pay_type + "&dis=" + discount + "&get_money=" + get_money + "&change_money=" + change_money + "&final_price=" 
         + final_price + "&comment=" + comment + "&name_cus=" + cus_name;  
->>>>>>> 837de08d503b0ea2cc86a041c070caedaa31b11c
 
         var WinPrint  = window.open('', '', 'left=0,top=0,width=1300,height=600,toolbar=0,scrollbars=0,status=0');
         $.ajax({
@@ -970,34 +942,33 @@
                 //alert(data);
                 if(data != "fail"){
                   if(print == "print"){
-                    WinPrint.document.write(
-                    "<div style='width: 7.9cm'>" +
-                      "<div style='font-size: 0.6em; text-align:center;'>PPS AUTO  GROUP " + b_name + "</div>" +
-                      "<div style='font-size: 0.6em; text-align:center;'>" + data + "</div>" +
-                      "<div style='font-size: 0.6em; text-align:center;'>" + datetime + "</div>" +
+                    WinPrint.document.write("<style>@page {size: auto; margin: 0mm;} .txt-right{ margin-right: 1.1cm; font-size: 0.6em; text-align:right; float: right; } .txt-left{ font-size: 0.6em; margin-left: 1.1cm; float: left; width: 60%; } .txt-ct{ font-size: 0.6em; text-align: center; }</style>" +
+                      "<div style='width: 7.9cm'>" +
+                      "<div class='txt-ct'>PPS AUTO GROUP " + b_name + "</div>" +
+                      "<div class='txt-ct'>" + data + "</div>" +
+                      "<div class='txt-ct'>" + datetime + "</div>" +
+                      "<div class='txt-left'>ผู้บันทึก : สมศร หมอนข้าง</div>" +
+                      "<div class='txt-right'>ลูกค้า : สมพร หมอนหนุน</div>" +
                       "<hr style='width: 80%;'>" +
-                      "<div style='margin-bottom: 0.6em;'>" + text + "</div>" +
+
+                      "+text+"+
+
                       "<hr style='width: 80%;'>" +
-                      "<div>" +
-                      "<div style='font-size: 0.6em; margin-left: 15%; float: left; width: 60%;'>รวม</div >" +
-                      "<div style='margin-left: 75%; margin-right: 15%; font-size: 0.6em;' >" + sum_price + "</div>" +
-                      "</div>" +
-                      "<div>" +
-                      "<div style='font-size: 0.6em; margin-left: 15%; float: left; width: 60%;'>ลด</div >" +
-                      "<div style='margin-left: 75%; margin-right: 15%; font-size: 0.6em;' >" + discount + "</div>" +
-                      "</div>" +
-                      "<div>" +
-                      "<div style='font-size: 0.6em; margin-left: 15%; float: left; width: 60%;'>สุทธิ</div >" +
-                      "<div style='margin-left: 75%; margin-right: 15%; font-size: 0.6em;' >" + final_price + "</div>" +
-                      "</div>" +
-                      "<div>" +
-                      "<div style='font-size: 0.6em; margin-left: 15%; float: left; width: 60%;'>รับ</div >" +
-                      "<div style='margin-left: 75%; margin-right: 15%; font-size: 0.6em;' >" + get_money + "</div>" +
-                      "</div>" +
-                      "<div>" +
-                      "<div style='font-size: 0.6em; margin-left: 15%; float: left; width: 60%;'>ทอน</div >" +
-                      "<div style='margin-left: 75%; margin-right: 15%; font-size: 0.6em;' >" + change_money + "</div>" +
-                      "</div>" +
+
+                      "<div class='txt-left'>รวม</div>" +
+                      "<div class='txt-right'>3000</div>" +
+
+                      "<div class='txt-left'>ลด</div>" +
+                      "<div class='txt-right'>200</div>" +
+
+                      "<div class='txt-left'>สุทธิ</div>" +
+                      "<div class='txt-right'>2800</div>" +
+
+                      "<div class='txt-left'>รับ</div>" +
+                      "<div class='txt-right'>3000</div>" +
+
+                      "<div class='txt-left'>ทอน</div>" +
+                      "<div class='txt-right'>200</div>" +
                       "</div>");
                     WinPrint.document.close();
                     WinPrint.focus();
