--- a/sale.html
+++ b/sale.html
@@ -975,7 +975,7 @@
         });
 
       }else{
-        alert("กรุณากรอกเงินที่รับหรือเลือกลูกค้าด้วย");      
+        alert("กรุณากรอกข้อมูลให้ครบถ้วนก่อนทำรายการ");      
       }
     }
     </script>
