--- a/manage_cus.html
+++ b/manage_cus.html
@@ -756,7 +756,7 @@
                 <div class="row" style="padding-right: 40px; padding-left: 40px;">
                     <div class="col-3 text-center">
                         <a href="#" style="color: black;" onclick="click_sort('customer_name')">ชื่อลูกค้า
-                            <i id="i-prod_name" class="fa fa-sort-down" style="vertical-align: top; margin-left:2px;" hidden></i>
+                            <i id="i-customer_name" class="fa fa-sort-down" style="vertical-align: top; margin-left:2px;" hidden></i>
                         </a>
                     </div>
                     <div class="col-6 text-center">
@@ -769,7 +769,7 @@
 
                 <ul class="list-group" style="padding-right: 20px; padding-left: 20px;">
                     <!-- Append text html -->
-                    <li id='item-1' class='list-group-item text-center rounded'>
+                    <!--<li id='item-1' class='list-group-item text-center rounded'>
                         <div class="row">
                             <div class="col-3 text-center">
                                 <input type="text" class="form-control">
@@ -790,7 +790,7 @@
                                 </button>
                             </div>
                         </div>
-                    </li>
+                    </li>-->
                 </ul>
                 <br>
             </div>
